se tiene la expresión analitica de la sumatoria, falta la integral. Se plantea usar valores de referencia del articulo de Ogata del 2006

--- a/ETAS.ipynb
+++ b/ETAS.ipynb
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 435,
+   "execution_count": 505,
    "id": "3ab0ce4a-100c-4da0-9b41-feade6ea90ea",
    "metadata": {},
    "outputs": [],
@@ -178,6 +178,14 @@
     "    #X = df['Latitude'].values.astype(float)\n",
     "    #Y = df['Longitude'].values.astype(float)\n",
     "    DT=df['Time'].iloc[len(df)-1]-df['Time'].iloc[0]\n",
+    "    DTD= DT.total_seconds() / (60*60*24)\n",
+    "    T=np.linspace(1, int(DTD) ,num=len(df))\n",
+    "    xi = dfV1['Latitude'].min()\n",
+    "    xf = dfV1['Latitude'].max()\n",
+    "    yi = dfV1['Longitude'].min()\n",
+    "    yf = dfV1['Longitude'].max()\n",
+    "    ti = min(T)\n",
+    "    tf = max(T)\n",
     "    Mc=3.0\n",
     "    Mm=max(df['Magnitude'])\n",
     "    X = np.zeros(len(df))\n",
@@ -196,91 +204,115 @@
     "    ESO=sp.sympify(ES)\n",
     "    MO=sp.sympify(M)\n",
     "    TO=sp.sympify(T)\n",
-    "    return XO,YO,LO,MO,TO\n",
+    "    return XO,YO,LO,MO,TO,xi,xf,yi,yf,ti,tf\n",
     "\n",
     "def EQETAS(X,Y,L,T,M):\n",
-    "    xi=min(X)\n",
-    "    xf=max(X)\n",
-    "    yi=min(Y)\n",
-    "    yf=max(Y)\n",
-    "    ti=min(T)\n",
-    "    tf=max(T)\n",
     "    FA=[]\n",
     "    x,y,k,p,c,t,a,m,d,q,u = symbols ('x y k p c t a m d q u')\n",
-    "    f1=k*(sp.Pow((t)+c,-p))*sp.Pow(( (x**2 + y**2) / exp(m*a) )+ d ,-q)\n",
+    "    f1=u+k*(sp.Pow((t)+c,-p))*sp.Pow(( (x**2 + y**2) / exp(m*a) )+ d ,-q)\n",
     "    for i in range(N):\n",
     "        a=f1.subs(x,X[i]).subs(y,Y[i]).subs(t,T[i]).subs(m,M[i])\n",
-    "        FA.append(a)\n",
+    "        Leq=sp.log(a)\n",
+    "        FA.append(Leq)\n",
     "    Eq=sum(FA)\n",
-    "    Leq=sp.log(Eq)\n",
-    "    Ieq=integrate(Eq,(x,xi,xf),(y,yi,yf),(t,ti,tf))\n",
-    "    return Leq"
+    "    return Eq\n",
+    "\n",
+    "def IEQ(xi,xf,yi,yf,ti,tf):\n",
+    "    x,y,k,p,c,t,a,m,d,q,u = symbols ('x y k p c t a m d q u')\n",
+    "    f1=u+k*(sp.Pow((t)+c,-p))*sp.Pow(( (x**2 + y**2) / exp(m*a) )+ d ,-q)\n",
+    "    f2= sp.integrate(f1,(x,xi,xf),(y,yi,yf),(t,ti,tf)).doit()\n",
+    "    return f2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 436,
+   "execution_count": 506,
+   "id": "96c439c6-22e8-47e0-ad78-9e12a45ed826",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X,Y,L,M,T,xi,xf,yi,yf,ti,tf=VECTS(dfV1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 507,
    "id": "d5710e19-2678-452b-b318-478e79735f3d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "KeyboardInterrupt\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "P=[1,1,1,1,1,1,1]\n",
-    "X,Y,L,M,T=VECTS(dfV1)\n",
     "F=EQETAS(X,Y,L,M,T)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ca31420b-0ea5-4343-9c6e-c2cde0ae354d",
+   "execution_count": 508,
+   "id": "e18a1703-4295-4b22-87c5-1766746403a1",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "T=IEQ(xi,xf,yi,yf,ti,tf)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 407,
-   "id": "9c5f60cb-cd10-4ca1-91a9-386951457aa0",
+   "execution_count": 512,
+   "id": "6cfe606a-bf1b-4136-b701-7713d52d528b",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "AV=sp.Integral(T,(y,yi,yf)).doit()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 314,
-   "id": "99c9ff92-7590-4c45-83e2-c951e8a19a19",
+   "execution_count": 515,
+   "id": "00ff3996-4e20-4d03-be24-39b40e209245",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "TA=simplify(T)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 517,
+   "id": "b3f5f178-e543-4952-b17a-22fdcc241ce4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "TAV=sp.Integral(TA,(y,yi,yf)).doit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 518,
+   "id": "6941509d-e69e-490c-8d01-f130a13c33d1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle 0$"
+       "$\\displaystyle \\begin{cases} - \\frac{14.8171421499999 k \\left(c + 1.0\\right)^{1 - p} \\int\\limits_{13.0405}^{13.391} {{}_{2}F_{1}\\left(\\begin{matrix} \\frac{1}{2}, q \\\\ \\frac{3}{2} \\end{matrix}\\middle| {\\frac{1787.11644049 e^{i \\pi} e^{- a m}}{\\operatorname{polar\\_lift}{\\left(d + y^{2} e^{- a m} \\right)}}} \\right)} \\operatorname{polar\\_lift}^{- q}{\\left(d + y^{2} e^{- a m} \\right)}\\, dy}{1.0 p - 1.0} + \\frac{15.0189951 k \\left(c + 1.0\\right)^{1 - p} \\int\\limits_{13.0405}^{13.391} {{}_{2}F_{1}\\left(\\begin{matrix} \\frac{1}{2}, q \\\\ \\frac{3}{2} \\end{matrix}\\middle| {\\frac{1836.13964004 e^{i \\pi} e^{- a m}}{\\operatorname{polar\\_lift}{\\left(d + y^{2} e^{- a m} \\right)}}} \\right)} \\operatorname{polar\\_lift}^{- q}{\\left(d + y^{2} e^{- a m} \\right)}\\, dy}{1.0 p - 1.0} + \\frac{14.8171421499999 k \\left(c + 4.0\\right)^{1 - p} \\int\\limits_{13.0405}^{13.391} {{}_{2}F_{1}\\left(\\begin{matrix} \\frac{1}{2}, q \\\\ \\frac{3}{2} \\end{matrix}\\middle| {\\frac{1787.11644049 e^{i \\pi} e^{- a m}}{\\operatorname{polar\\_lift}{\\left(d + y^{2} e^{- a m} \\right)}}} \\right)} \\operatorname{polar\\_lift}^{- q}{\\left(d + y^{2} e^{- a m} \\right)}\\, dy}{1.0 p - 1.0} - \\frac{15.0189951 k \\left(c + 4.0\\right)^{1 - p} \\int\\limits_{13.0405}^{13.391} {{}_{2}F_{1}\\left(\\begin{matrix} \\frac{1}{2}, q \\\\ \\frac{3}{2} \\end{matrix}\\middle| {\\frac{1836.13964004 e^{i \\pi} e^{- a m}}{\\operatorname{polar\\_lift}{\\left(d + y^{2} e^{- a m} \\right)}}} \\right)} \\operatorname{polar\\_lift}^{- q}{\\left(d + y^{2} e^{- a m} \\right)}\\, dy}{1.0 p - 1.0} + \\frac{0.212248376925 p u}{1.0 p - 1.0} - \\frac{0.212248376925 u}{1.0 p - 1.0} & \\text{for}\\: \\left(p > -\\infty \\wedge p < 1\\right) \\vee \\left(p > 1 \\wedge p < \\infty\\right) \\\\14.8171421499999 k \\log{\\left(c + 1.0 \\right)} \\int\\limits_{13.0405}^{13.391} {{}_{2}F_{1}\\left(\\begin{matrix} \\frac{1}{2}, q \\\\ \\frac{3}{2} \\end{matrix}\\middle| {\\frac{1787.11644049 e^{i \\pi} e^{- a m}}{\\operatorname{polar\\_lift}{\\left(d + y^{2} e^{- a m} \\right)}}} \\right)} \\operatorname{polar\\_lift}^{- q}{\\left(d + y^{2} e^{- a m} \\right)}\\, dy - 15.0189951 k \\log{\\left(c + 1.0 \\right)} \\int\\limits_{13.0405}^{13.391} {{}_{2}F_{1}\\left(\\begin{matrix} \\frac{1}{2}, q \\\\ \\frac{3}{2} \\end{matrix}\\middle| {\\frac{1836.13964004 e^{i \\pi} e^{- a m}}{\\operatorname{polar\\_lift}{\\left(d + y^{2} e^{- a m} \\right)}}} \\right)} \\operatorname{polar\\_lift}^{- q}{\\left(d + y^{2} e^{- a m} \\right)}\\, dy - 14.8171421499999 k \\log{\\left(c + 4.0 \\right)} \\int\\limits_{13.0405}^{13.391} {{}_{2}F_{1}\\left(\\begin{matrix} \\frac{1}{2}, q \\\\ \\frac{3}{2} \\end{matrix}\\middle| {\\frac{1787.11644049 e^{i \\pi} e^{- a m}}{\\operatorname{polar\\_lift}{\\left(d + y^{2} e^{- a m} \\right)}}} \\right)} \\operatorname{polar\\_lift}^{- q}{\\left(d + y^{2} e^{- a m} \\right)}\\, dy + 15.0189951 k \\log{\\left(c + 4.0 \\right)} \\int\\limits_{13.0405}^{13.391} {{}_{2}F_{1}\\left(\\begin{matrix} \\frac{1}{2}, q \\\\ \\frac{3}{2} \\end{matrix}\\middle| {\\frac{1836.13964004 e^{i \\pi} e^{- a m}}{\\operatorname{polar\\_lift}{\\left(d + y^{2} e^{- a m} \\right)}}} \\right)} \\operatorname{polar\\_lift}^{- q}{\\left(d + y^{2} e^{- a m} \\right)}\\, dy + 0.212248376925 u & \\text{otherwise} \\end{cases}$"
       ],
       "text/plain": [
-       "0"
+       "Piecewise((-14.8171421499999*k*(c + 1.0)**(1 - p)*Integral(hyper((1/2, q), (3/2,), 1787.11644049*exp_polar(I*pi)*exp(-a*m)/polar_lift(d + y**2*exp(-a*m)))/polar_lift(d + y**2*exp(-a*m))**q, (y, 13.0405, 13.391))/(1.0*p - 1.0) + 15.0189951*k*(c + 1.0)**(1 - p)*Integral(hyper((1/2, q), (3/2,), 1836.13964004*exp_polar(I*pi)*exp(-a*m)/polar_lift(d + y**2*exp(-a*m)))/polar_lift(d + y**2*exp(-a*m))**q, (y, 13.0405, 13.391))/(1.0*p - 1.0) + 14.8171421499999*k*(c + 4.0)**(1 - p)*Integral(hyper((1/2, q), (3/2,), 1787.11644049*exp_polar(I*pi)*exp(-a*m)/polar_lift(d + y**2*exp(-a*m)))/polar_lift(d + y**2*exp(-a*m))**q, (y, 13.0405, 13.391))/(1.0*p - 1.0) - 15.0189951*k*(c + 4.0)**(1 - p)*Integral(hyper((1/2, q), (3/2,), 1836.13964004*exp_polar(I*pi)*exp(-a*m)/polar_lift(d + y**2*exp(-a*m)))/polar_lift(d + y**2*exp(-a*m))**q, (y, 13.0405, 13.391))/(1.0*p - 1.0) + 0.212248376925*p*u/(1.0*p - 1.0) - 0.212248376925*u/(1.0*p - 1.0), ((p > -oo) & (p < 1)) | ((p > 1) & (p < oo))), (14.8171421499999*k*log(c + 1.0)*Integral(hyper((1/2, q), (3/2,), 1787.11644049*exp_polar(I*pi)*exp(-a*m)/polar_lift(d + y**2*exp(-a*m)))/polar_lift(d + y**2*exp(-a*m))**q, (y, 13.0405, 13.391)) - 15.0189951*k*log(c + 1.0)*Integral(hyper((1/2, q), (3/2,), 1836.13964004*exp_polar(I*pi)*exp(-a*m)/polar_lift(d + y**2*exp(-a*m)))/polar_lift(d + y**2*exp(-a*m))**q, (y, 13.0405, 13.391)) - 14.8171421499999*k*log(c + 4.0)*Integral(hyper((1/2, q), (3/2,), 1787.11644049*exp_polar(I*pi)*exp(-a*m)/polar_lift(d + y**2*exp(-a*m)))/polar_lift(d + y**2*exp(-a*m))**q, (y, 13.0405, 13.391)) + 15.0189951*k*log(c + 4.0)*Integral(hyper((1/2, q), (3/2,), 1836.13964004*exp_polar(I*pi)*exp(-a*m)/polar_lift(d + y**2*exp(-a*m)))/polar_lift(d + y**2*exp(-a*m))**q, (y, 13.0405, 13.391)) + 0.212248376925*u, True))"
       ]
      },
-     "execution_count": 314,
+     "execution_count": 518,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "TAV"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68a5b897-a74f-4704-9ba7-22b2e0461ece",
+   "id": "187ba5e8-7b3b-4ef3-b4fc-46097f2a2c9f",
    "metadata": {},
    "outputs": [],
    "source": []
