--- a/ETAS.ipynb
+++ b/ETAS.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 256,
    "id": "403b33d5-331f-4ed3-a46d-dddf74825ba5",
    "metadata": {},
    "outputs": [],
@@ -31,6 +31,9 @@
     "import numpy as np\n",
     "from scipy.optimize import *\n",
     "import sympy as sp\n",
+    "from sympy import *\n",
+    "import scipy.integrate as spi\n",
+    "from scipy import *\n",
     "warnings.filterwarnings('ignore')\n",
     "\n",
     "sns.set_context('notebook')\n",
@@ -39,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 238,
    "id": "1ffac2d3-e037-45eb-9115-f540b65e9ae6",
    "metadata": {},
    "outputs": [
@@ -64,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 239,
    "id": "76d7eaa9-e123-4f55-a0a6-46d9883a2e1b",
    "metadata": {},
    "outputs": [],
@@ -74,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 240,
    "id": "b4063cc7-0fd6-4d24-a444-c05f7e38ffb0",
    "metadata": {},
    "outputs": [],
@@ -85,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 241,
    "id": "716b7a2e-e288-4218-9eba-dd78a57d4c1e",
    "metadata": {},
    "outputs": [],
@@ -97,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 242,
    "id": "33b07950-49ed-4e94-9074-e4ae407b0b1a",
    "metadata": {},
    "outputs": [],
@@ -121,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 243,
    "id": "1ded52d4-f163-4339-beb2-276da5e9d30d",
    "metadata": {},
    "outputs": [],
@@ -145,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 244,
    "id": "d0937fed-e567-47cb-a49f-243890e3d1b5",
    "metadata": {},
    "outputs": [],
@@ -169,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 505,
+   "execution_count": 353,
    "id": "3ab0ce4a-100c-4da0-9b41-feade6ea90ea",
    "metadata": {},
    "outputs": [],
@@ -188,131 +191,199 @@
     "    tf = max(T)\n",
     "    Mc=3.0\n",
     "    Mm=max(df['Magnitude'])\n",
+    "    mp=Mm-Mc\n",
     "    X = np.zeros(len(df))\n",
     "    Y = np.zeros(len(df))\n",
     "    M = np.zeros(len(df))\n",
-    "    ES = np.zeros(len(df))\n",
+    "    L = np.zeros(len(df))\n",
     "    for i in df.index:\n",
     "        M[i]=df['Magnitude'].iloc[i]-Mc\n",
     "        X[i]=df['Latitude'].iloc[len(df)-1]-df['Latitude'].iloc[i]\n",
     "        Y[i]=df['Longitude'].iloc[len(df)-1]-df['Longitude'].iloc[i]\n",
-    "        ES[i]=(np.power(X[i],2)+np.power(Y[i],2))\n",
+    "        L[i]=(np.power(X[i],2)+np.power(Y[i],2))\n",
     "    DTD= DT.total_seconds() / (60*60*24)\n",
     "    T=np.linspace(1, int(DTD) ,num=len(df))\n",
+    "    return X,Y,L,M,T,xi,xf,yi,yf,ti,tf,mp\n",
+    "\n",
+    "def EQETAS(X,Y,L,M,T):\n",
     "    XO=sp.sympify(X)\n",
     "    YO=sp.sympify(Y)\n",
-    "    ESO=sp.sympify(ES)\n",
+    "    LO=sp.sympify(L)\n",
     "    MO=sp.sympify(M)\n",
     "    TO=sp.sympify(T)\n",
-    "    return XO,YO,LO,MO,TO,xi,xf,yi,yf,ti,tf\n",
-    "\n",
-    "def EQETAS(X,Y,L,T,M):\n",
     "    FA=[]\n",
-    "    x,y,k,p,c,t,a,m,d,q,u = symbols ('x y k p c t a m d q u')\n",
+    "    N=X.size\n",
+    "    x,y,k,p,c,t,a,m,d,q,u = symbols ('x, y, k, p, c, t, a, m, d, q, u')\n",
     "    f1=u+k*(sp.Pow((t)+c,-p))*sp.Pow(( (x**2 + y**2) / exp(m*a) )+ d ,-q)\n",
     "    for i in range(N):\n",
-    "        a=f1.subs(x,X[i]).subs(y,Y[i]).subs(t,T[i]).subs(m,M[i])\n",
-    "        Leq=sp.log(a)\n",
+    "        A=sp.simplify(f1.subs(x,XO[i]).subs(y,YO[i]).subs(t,TO[i]).subs(m,MO[i])).evalf()\n",
+    "        Leq=sp.log(A)\n",
     "        FA.append(Leq)\n",
     "    Eq=sum(FA)\n",
     "    return Eq\n",
     "\n",
-    "def IEQ(xi,xf,yi,yf,ti,tf):\n",
-    "    x,y,k,p,c,t,a,m,d,q,u = symbols ('x y k p c t a m d q u')\n",
+    "def IEQ(xi,xf,yi,yf,ti,tf,mp):\n",
+    "    u1=0.000335\n",
+    "    k1=0.00016700000000000002\n",
+    "    c1=0.0051400000000000005\n",
+    "    a1=0.961\n",
+    "    d1=0.00034100000000000005\n",
+    "    q1=1.405\n",
+    "    p1=0.961\n",
+    "    x,y,k,p,c,t,a,m,d,q,u = symbols('x, y, k, p, c, t, a, m, d, q, u')\n",
     "    f1=u+k*(sp.Pow((t)+c,-p))*sp.Pow(( (x**2 + y**2) / exp(m*a) )+ d ,-q)\n",
-    "    f2= sp.integrate(f1,(x,xi,xf),(y,yi,yf),(t,ti,tf)).doit()\n",
-    "    return f2"
+    "    #f2= sp.integrate(f1,(x,xi,xf),(y,yi,yf),(t,ti,tf)).doit()\n",
+    "    f2=f1.subs(u,u1).subs(k,k1).subs(c,c1).subs(a,a1).subs(d,d1).subs(q,q1).subs(p,p1).subs(m,mp)\n",
+    "    f2_np = lambdify((x, y, t), f2, modules=['scipy'])\n",
+    "    resultado, error=spi.nquad(f2_np, [(xi, xf), (yi, yf), (ti, tf)])\n",
+    "    #resultado=\n",
+    "    #P=integrate(f2,(x,xi,xf),(y,yi,yf),(t,ti,tf)).doit()\n",
+    "    return resultado\n",
+    "\n",
+    "def ETSA(X,Y,L,M,T,P,r):\n",
+    "    k,p,c,a,d,q,u = symbols ('k, p, c, a, d, q, u')\n",
+    "    k1=P[0]\n",
+    "    p1=P[1]\n",
+    "    c1=P[2]\n",
+    "    a1=P[3]\n",
+    "    d1=P[4]\n",
+    "    q1=P[5]\n",
+    "    u1=P[6]\n",
+    "    H=EQETAS(X,Y,L,M,T)\n",
+    "    LH=(-1)*(H-r)\n",
+    "    LLH=lambdify((k,p,c,a,d,q,u), LH, modules=['scipy'])\n",
+    "    return LLH(k1,p1,c1,a1,d1,q1,u1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 506,
+   "execution_count": 363,
    "id": "96c439c6-22e8-47e0-ad78-9e12a45ed826",
    "metadata": {},
    "outputs": [],
    "source": [
-    "X,Y,L,M,T,xi,xf,yi,yf,ti,tf=VECTS(dfV1)"
+    "X,Y,L,M,T,xi,xf,yi,yf,ti,tf,mp=VECTS(dfV2)\n",
+    "P=[1,1,1,1,1,1,1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 507,
+   "execution_count": 364,
    "id": "d5710e19-2678-452b-b318-478e79735f3d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "P=[1,1,1,1,1,1,1]\n",
-    "F=EQETAS(X,Y,L,M,T)"
+    "F=EQETAS(X,Y,L,M,T)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 508,
+   "execution_count": 365,
    "id": "e18a1703-4295-4b22-87c5-1766746403a1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "T=IEQ(xi,xf,yi,yf,ti,tf)"
+    "\n",
+    "Al=IEQ(xi,xf,yi,yf,ti,tf,mp)\n",
+    "#parametros de U  u, c,"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 512,
+   "execution_count": 366,
+   "id": "3e6015b8-a7cf-49cf-87a6-8270f5b8371e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def constraint1(P):\n",
+    "    return P[1]\n",
+    "\n",
+    "def constraint2(P):\n",
+    "    return P[2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 367,
    "id": "6cfe606a-bf1b-4136-b701-7713d52d528b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "AV=sp.Integral(T,(y,yi,yf)).doit()"
+    "#ALN=lambdify((x,y,t),Al,'numpy')\n",
+    "#minimize(ETSA, P, args=(X,Y,L,M,T,Al))\n",
+    "cons = (({'type':'ineq','fun': constraint1},\n",
+    "         {'type':'ineq','fun': constraint2}))\n",
+    "ar1=minimize(ETSA, P, args=(X,Y,L,M,T,Al),constraints=cons)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 515,
+   "execution_count": 368,
    "id": "00ff3996-4e20-4d03-be24-39b40e209245",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "TA=simplify(T)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 517,
-   "id": "b3f5f178-e543-4952-b17a-22fdcc241ce4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "TAV=sp.Integral(TA,(y,yi,yf)).doit()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 518,
-   "id": "6941509d-e69e-490c-8d01-f130a13c33d1",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/latex": [
-       "$\\displaystyle \\begin{cases} - \\frac{14.8171421499999 k \\left(c + 1.0\\right)^{1 - p} \\int\\limits_{13.0405}^{13.391} {{}_{2}F_{1}\\left(\\begin{matrix} \\frac{1}{2}, q \\\\ \\frac{3}{2} \\end{matrix}\\middle| {\\frac{1787.11644049 e^{i \\pi} e^{- a m}}{\\operatorname{polar\\_lift}{\\left(d + y^{2} e^{- a m} \\right)}}} \\right)} \\operatorname{polar\\_lift}^{- q}{\\left(d + y^{2} e^{- a m} \\right)}\\, dy}{1.0 p - 1.0} + \\frac{15.0189951 k \\left(c + 1.0\\right)^{1 - p} \\int\\limits_{13.0405}^{13.391} {{}_{2}F_{1}\\left(\\begin{matrix} \\frac{1}{2}, q \\\\ \\frac{3}{2} \\end{matrix}\\middle| {\\frac{1836.13964004 e^{i \\pi} e^{- a m}}{\\operatorname{polar\\_lift}{\\left(d + y^{2} e^{- a m} \\right)}}} \\right)} \\operatorname{polar\\_lift}^{- q}{\\left(d + y^{2} e^{- a m} \\right)}\\, dy}{1.0 p - 1.0} + \\frac{14.8171421499999 k \\left(c + 4.0\\right)^{1 - p} \\int\\limits_{13.0405}^{13.391} {{}_{2}F_{1}\\left(\\begin{matrix} \\frac{1}{2}, q \\\\ \\frac{3}{2} \\end{matrix}\\middle| {\\frac{1787.11644049 e^{i \\pi} e^{- a m}}{\\operatorname{polar\\_lift}{\\left(d + y^{2} e^{- a m} \\right)}}} \\right)} \\operatorname{polar\\_lift}^{- q}{\\left(d + y^{2} e^{- a m} \\right)}\\, dy}{1.0 p - 1.0} - \\frac{15.0189951 k \\left(c + 4.0\\right)^{1 - p} \\int\\limits_{13.0405}^{13.391} {{}_{2}F_{1}\\left(\\begin{matrix} \\frac{1}{2}, q \\\\ \\frac{3}{2} \\end{matrix}\\middle| {\\frac{1836.13964004 e^{i \\pi} e^{- a m}}{\\operatorname{polar\\_lift}{\\left(d + y^{2} e^{- a m} \\right)}}} \\right)} \\operatorname{polar\\_lift}^{- q}{\\left(d + y^{2} e^{- a m} \\right)}\\, dy}{1.0 p - 1.0} + \\frac{0.212248376925 p u}{1.0 p - 1.0} - \\frac{0.212248376925 u}{1.0 p - 1.0} & \\text{for}\\: \\left(p > -\\infty \\wedge p < 1\\right) \\vee \\left(p > 1 \\wedge p < \\infty\\right) \\\\14.8171421499999 k \\log{\\left(c + 1.0 \\right)} \\int\\limits_{13.0405}^{13.391} {{}_{2}F_{1}\\left(\\begin{matrix} \\frac{1}{2}, q \\\\ \\frac{3}{2} \\end{matrix}\\middle| {\\frac{1787.11644049 e^{i \\pi} e^{- a m}}{\\operatorname{polar\\_lift}{\\left(d + y^{2} e^{- a m} \\right)}}} \\right)} \\operatorname{polar\\_lift}^{- q}{\\left(d + y^{2} e^{- a m} \\right)}\\, dy - 15.0189951 k \\log{\\left(c + 1.0 \\right)} \\int\\limits_{13.0405}^{13.391} {{}_{2}F_{1}\\left(\\begin{matrix} \\frac{1}{2}, q \\\\ \\frac{3}{2} \\end{matrix}\\middle| {\\frac{1836.13964004 e^{i \\pi} e^{- a m}}{\\operatorname{polar\\_lift}{\\left(d + y^{2} e^{- a m} \\right)}}} \\right)} \\operatorname{polar\\_lift}^{- q}{\\left(d + y^{2} e^{- a m} \\right)}\\, dy - 14.8171421499999 k \\log{\\left(c + 4.0 \\right)} \\int\\limits_{13.0405}^{13.391} {{}_{2}F_{1}\\left(\\begin{matrix} \\frac{1}{2}, q \\\\ \\frac{3}{2} \\end{matrix}\\middle| {\\frac{1787.11644049 e^{i \\pi} e^{- a m}}{\\operatorname{polar\\_lift}{\\left(d + y^{2} e^{- a m} \\right)}}} \\right)} \\operatorname{polar\\_lift}^{- q}{\\left(d + y^{2} e^{- a m} \\right)}\\, dy + 15.0189951 k \\log{\\left(c + 4.0 \\right)} \\int\\limits_{13.0405}^{13.391} {{}_{2}F_{1}\\left(\\begin{matrix} \\frac{1}{2}, q \\\\ \\frac{3}{2} \\end{matrix}\\middle| {\\frac{1836.13964004 e^{i \\pi} e^{- a m}}{\\operatorname{polar\\_lift}{\\left(d + y^{2} e^{- a m} \\right)}}} \\right)} \\operatorname{polar\\_lift}^{- q}{\\left(d + y^{2} e^{- a m} \\right)}\\, dy + 0.212248376925 u & \\text{otherwise} \\end{cases}$"
-      ],
       "text/plain": [
-       "Piecewise((-14.8171421499999*k*(c + 1.0)**(1 - p)*Integral(hyper((1/2, q), (3/2,), 1787.11644049*exp_polar(I*pi)*exp(-a*m)/polar_lift(d + y**2*exp(-a*m)))/polar_lift(d + y**2*exp(-a*m))**q, (y, 13.0405, 13.391))/(1.0*p - 1.0) + 15.0189951*k*(c + 1.0)**(1 - p)*Integral(hyper((1/2, q), (3/2,), 1836.13964004*exp_polar(I*pi)*exp(-a*m)/polar_lift(d + y**2*exp(-a*m)))/polar_lift(d + y**2*exp(-a*m))**q, (y, 13.0405, 13.391))/(1.0*p - 1.0) + 14.8171421499999*k*(c + 4.0)**(1 - p)*Integral(hyper((1/2, q), (3/2,), 1787.11644049*exp_polar(I*pi)*exp(-a*m)/polar_lift(d + y**2*exp(-a*m)))/polar_lift(d + y**2*exp(-a*m))**q, (y, 13.0405, 13.391))/(1.0*p - 1.0) - 15.0189951*k*(c + 4.0)**(1 - p)*Integral(hyper((1/2, q), (3/2,), 1836.13964004*exp_polar(I*pi)*exp(-a*m)/polar_lift(d + y**2*exp(-a*m)))/polar_lift(d + y**2*exp(-a*m))**q, (y, 13.0405, 13.391))/(1.0*p - 1.0) + 0.212248376925*p*u/(1.0*p - 1.0) - 0.212248376925*u/(1.0*p - 1.0), ((p > -oo) & (p < 1)) | ((p > 1) & (p < oo))), (14.8171421499999*k*log(c + 1.0)*Integral(hyper((1/2, q), (3/2,), 1787.11644049*exp_polar(I*pi)*exp(-a*m)/polar_lift(d + y**2*exp(-a*m)))/polar_lift(d + y**2*exp(-a*m))**q, (y, 13.0405, 13.391)) - 15.0189951*k*log(c + 1.0)*Integral(hyper((1/2, q), (3/2,), 1836.13964004*exp_polar(I*pi)*exp(-a*m)/polar_lift(d + y**2*exp(-a*m)))/polar_lift(d + y**2*exp(-a*m))**q, (y, 13.0405, 13.391)) - 14.8171421499999*k*log(c + 4.0)*Integral(hyper((1/2, q), (3/2,), 1787.11644049*exp_polar(I*pi)*exp(-a*m)/polar_lift(d + y**2*exp(-a*m)))/polar_lift(d + y**2*exp(-a*m))**q, (y, 13.0405, 13.391)) + 15.0189951*k*log(c + 4.0)*Integral(hyper((1/2, q), (3/2,), 1836.13964004*exp_polar(I*pi)*exp(-a*m)/polar_lift(d + y**2*exp(-a*m)))/polar_lift(d + y**2*exp(-a*m))**q, (y, 13.0405, 13.391)) + 0.212248376925*u, True))"
+       "     fun: -5.5995874264111425\n",
+       "     jac: array([-2.05218792e-04,  0.00000000e+00,  2.36868858e-04, -1.45077705e-04,\n",
+       "       -1.88112259e-04, -7.15255737e-06, -3.50475311e-05])\n",
+       " message: 'Optimization terminated successfully'\n",
+       "    nfev: 104\n",
+       "     nit: 13\n",
+       "    njev: 13\n",
+       "  status: 0\n",
+       " success: True\n",
+       "       x: array([-1.00907376e-03,  0.00000000e+00,  1.11955276e-03, -6.63710130e-04,\n",
+       "       -1.01714512e-03, -2.95314817e-05, -1.40376072e-04])"
       ]
      },
-     "execution_count": 518,
+     "execution_count": 368,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "TAV"
+    "ar1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 263,
+   "id": "b3f5f178-e543-4952-b17a-22fdcc241ce4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#TAV=sp.Integral(TA,(y,yi,yf)).doit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 264,
+   "id": "6941509d-e69e-490c-8d01-f130a13c33d1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#TAV"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 362,
+   "id": "187ba5e8-7b3b-4ef3-b4fc-46097f2a2c9f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ps1=[ 1.06416629e-04,  7.23532699e-04,  0.00000000e+00,  2.59892357e-05,\n",
+    "        1.65348183e-04,  5.83631350e-05, -5.39498838e-06 ]\n",
+    "ps2=[-1.00907376e-03,  0.00000000e+00,  1.11955276e-03, -6.63710130e-04,\n",
+    "       -1.01714512e-03, -2.95314817e-05, -1.40376072e-04]\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "187ba5e8-7b3b-4ef3-b4fc-46097f2a2c9f",
+   "id": "2716d0f3-9381-4463-be4b-22ffd7295a81",
    "metadata": {},
    "outputs": [],
    "source": []
