se agragarón comentarios mas detallados en el codigo, tambien se puntualizaron mejor las libreriás usadas

--- a/ETAS.ipynb
+++ b/ETAS.ipynb
@@ -204,6 +204,11 @@
    "outputs": [],
    "source": [
     "def VECTS(df):\n",
+    "    #se define un vector temporal en terminos del dataset como un espacio lineal\n",
+    "    #creado a partir de las diferencias entre cada dato y el ultimo sismo registrado, esto crea basicamente\n",
+    "    # el vector (t-{j}<t) para tomar en cuenta la historia de los tiempos registrados j antes del final del intervalo T \n",
+    "    # DTD determina los segundo contenidos en toda la linea temporal y los convierte a días por ultimo el vector T\n",
+    "    # define un espacio lineal que toma de 1 a T \n",
     "    DT=df['Time'].iloc[len(df)-1]-df['Time'].iloc[0]\n",
     "    DTD= DT.total_seconds() / (60*60*24)\n",
     "    T=np.linspace(1, int(DTD) ,num=len(df))\n",
@@ -220,6 +225,10 @@
     "    Y = np.zeros(len(df))\n",
     "    M = np.zeros(len(df))\n",
     "    L = np.zeros(len(df))\n",
+    "    #en este for me define un for que retorna las diferencias de cada dato con respecto a la ultima lectura de esa ventana\n",
+    "    # L es el resultado del producto punto de la matriz identidad con la transpuesta por lo que es el producto de \n",
+    "    # de la matriz por su transpuesta. (sin embargo hay que tomar en cuenta que tecnicámente el vector resultado es nxn)\n",
+    "    # no se me hace claro como navegarlos correctamente por lo que tome los vectore de cada iteración para definir la distancia\n",
     "    for i in df.index:\n",
     "        M[i]=df['Magnitude'].iloc[i]-Mc\n",
     "        X[i]=df['Latitude'].iloc[len(df)-1]-df['Latitude'].iloc[i]\n",
@@ -229,6 +238,9 @@
     "    T=np.linspace(1, int(DTD) ,num=len(df))\n",
     "    return X,Y,L,M,T,xi,xf,yi,yf,ti,tf,mp\n",
     "\n",
+    "# Los vectores tambien deben pasarse a sympy para que sean compatibles con el retorno de las funciones \n",
+    "#(esto no lo entiendo por que si deberia tomar vectores de flotantes)\n",
+    " \n",
     "def EQETAS(X,Y,L,M,T):\n",
     "    XO=sp.sympify(X)\n",
     "    YO=sp.sympify(Y)\n",
