creo la rama de pruebas para cambiar unas cosas del modelo y como se desarrolla a lo largo del codigo, más que nada un seguro por si desajusto demasiado el codigo

--- a/ETAS.ipynb
+++ b/ETAS.ipynb
@@ -608,12 +608,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e9215a66-bcd5-43a8-82e4-1fecb137d76d",
+   "cell_type": "markdown",
+   "id": "af7b82e3-3352-4173-b740-55b9c4e78b76",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "esto es una rama"
+   ]
   },
   {
    "cell_type": "code",
