se plantea trabajar de nuevo el modelo ETAS esta vez de manera más rigurosa con la idea de mejorar todo en general

--- a/ETAS.ipynb
+++ b/ETAS.ipynb
@@ -286,7 +286,10 @@
     "    H=EQETAS(X,Y,L,M,T)\n",
     "    LH=(-1)*(H-r)\n",
     "    LLH=lambdify((k,p,c,a,d,q,u), LH, modules=['scipy'])\n",
-    "    return LLH(k1,p1,c1,a1,d1,q1,u1)"
+    "    return LLH(k1,p1,c1,a1,d1,q1,u1)\n",
+    "\n",
+    "#TO-DO \n",
+    "#Hay que realmente estimar la integral para la función de maxima verosimilitud. a partir del metodo Davidon-fletcher-Powell"
    ]
   },
   {
