se creo el archivo link para guardar el github de seisbench

--- a/SeisDataAna/Untitled.ipynb
+++ b/SeisDataAna/Untitled.ipynb
@@ -79,19 +79,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "b9ac1369-6b9c-44dd-a648-fc57eccba960",
    "metadata": {},
    "outputs": [],
    "source": [
     "import seisbench\n",
-    "import seisbench as sbd"
+    "import seisbench.data as sbd\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "73414497-0ef0-4591-a73a-31d07b6d320d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from urllib.parse import urljoin\n",
+    "\n",
+    "seisbench.remote_root = \"https://hifis-storage.desy.de:2880/Helmholtz/HelmholtzAI/SeisBench/\"\n",
+    "seisbench.remote_data_root = urljoin(seisbench.remote_root, \"datasets/\")\n",
+    "seisbench.remote_model_root = urljoin(seisbench.remote_root, \"models/v3/\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "5028cb60-9d60-4977-a594-0a58619040fd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DummyDataset - 100 traces\n"
+     ]
+    }
+   ],
+   "source": [
+    "Data=sbd.DummyDataset()\n",
+    "print(Data)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5028cb60-9d60-4977-a594-0a58619040fd",
+   "id": "546c3113-9858-4798-9536-54dd09e9e3e9",
    "metadata": {},
    "outputs": [],
    "source": []
