Se hizo una carpeta con las imagenes del programa ETAS se planea modificar el archivo ETAS.py una vez se plante la estrategía y los datos a utilizarpara las estimaciones

--- a/SeisDataAna/SeisDataAna.ipynb
+++ b/SeisDataAna/SeisDataAna.ipynb
@@ -5,12 +5,24 @@
    "execution_count": 1,
    "id": "14ff6fbd-e8e3-462c-84c0-966076934b6b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'seisbench' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [1], line 7\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01murllib\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mparse\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m urljoin\n\u001b[1;32m----> 7\u001b[0m seisbench\u001b[38;5;241m.\u001b[39mremote_root \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mhttps://hifis-storage.desy.de:2880/Helmholtz/HelmholtzAI/SeisBench/\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m      8\u001b[0m seisbench\u001b[38;5;241m.\u001b[39mremote_data_root \u001b[38;5;241m=\u001b[39m urljoin(seisbench\u001b[38;5;241m.\u001b[39mremote_root, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdatasets/\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m      9\u001b[0m seisbench\u001b[38;5;241m.\u001b[39mremote_model_root \u001b[38;5;241m=\u001b[39m urljoin(seisbench\u001b[38;5;241m.\u001b[39mremote_root, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmodels/v3/\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'seisbench' is not defined"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import scipy as sp\n",
     "import matplotlib.pyplot as plt\n",
-    "import pandas as pd"
+    "import pandas as pd\n"
    ]
   },
   {
@@ -79,18 +91,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "b9ac1369-6b9c-44dd-a648-fc57eccba960",
    "metadata": {},
    "outputs": [],
    "source": [
     "import seisbench\n",
-    "import seisbench.data as sbd\n"
+    "import seisbench.data as sbd\n",
+    "from urllib.parse import urljoin\n",
+    "\n",
+    "seisbench.remote_root = \"https://hifis-storage.desy.de:2880/Helmholtz/HelmholtzAI/SeisBench/\"\n",
+    "seisbench.remote_data_root = urljoin(seisbench.remote_root, \"datasets/\")\n",
+    "seisbench.remote_model_root = urljoin(seisbench.remote_root, \"models/v3/\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "75173d52-5ba2-43ca-8a9f-41dedf608779",
    "metadata": {},
    "outputs": [
@@ -119,13 +136,7 @@
    "id": "73414497-0ef0-4591-a73a-31d07b6d320d",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "from urllib.parse import urljoin\n",
-    "\n",
-    "seisbench.remote_root = \"https://hifis-storage.desy.de:2880/Helmholtz/HelmholtzAI/SeisBench/\"\n",
-    "seisbench.remote_data_root = urljoin(seisbench.remote_root, \"datasets/\")\n",
-    "seisbench.remote_model_root = urljoin(seisbench.remote_root, \"models/v3/\")"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
